# poc-rust-ro-server

./: .gitignore  Cargo.toml  auth_packets.txt
griffon/: Cargo.toml
griffon/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
packet/: Cargo.toml
packet/src/: lib.rs
packet_derive/: Cargo.toml
packet_derive/src/: lib.rs
packets/: Cargo.toml
packets/src/: auth.rs
src/client/: main.rs
src/server/: main.rs
systems/: Cargo.toml
systems/src/: auth.rs  lib.rs
