[workspace]
resolver = "2"
members = [
  "griffon",
  "packet",
  "packet_derive",
  "packets",
  "systems",
  "network",
]

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[package]
name = "einbroch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.5.0"

griffon = { path = "griffon" }
packet = { path = "packet" }
packet_derive = { path = "packet_derive" }
packets = { path = "packets" }
systems = { path = "systems" }
network = { path = "network" }